[package]
name = "iot_monitoring_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"